--- a/static/amishscooters.com/moreinfo.html
+++ b/static/amishscooters.com/moreinfo.html
@@ -34,7 +34,7 @@ var TODAY = monthname[d.getMonth()] + " " + d.getDate() + ", " + d.getFullYear()
   </tr>
 
   <tr bgcolor="#3366CC">
-    <td height="64" colspan="3" id="tagline" valign="top" align="center"><p><span class="bodyText style3"><a href="http|//www.hoffman-house.com" target="_blank"><img src="images/graphics/hoffman-house-address-yellow.png" alt="Hoffman House address" width="486" height="143" border="0" /></a></span></p>
+    <td height="64" colspan="3" id="tagline" valign="top" align="center"><p><span class="bodyText style3"><a href="https://www.hoffman-house.com" target="_blank"><img src="images/graphics/hoffman-house-address-yellow.png" alt="Hoffman House address" width="486" height="143" border="0" /></a></span></p>
     </td>
 	<td width="9">&nbsp;</td>
   </tr>
@@ -62,10 +62,10 @@ var TODAY = monthname[d.getMonth()] + " " + d.getDate() + ", " + d.getFullYear()
           <td width="165"><a href="http://www.amishscooters.com" class="navText">home</a></td>
         </tr>
         <tr>
-          <td width="165"><a href="http://www.hoffman-house.com" class="navText">main site </a></td>
+          <td width="165"><a href="https://www.hoffman-house.com" class="navText">main site </a></td>
         </tr>
         <tr>
-          <td width="165"><a href="http://www.hoffman-house.com/store/store.php" class="navText">shop for scooters </a></td>
+          <td width="165"><a href="https://www.hoffman-house.com/store/store.php" class="navText">shop for scooters </a></td>
         </tr>
         <tr>
           <td width="165"><a href="specials.html" class="navText">specials</a></td>
@@ -98,7 +98,7 @@ var TODAY = monthname[d.getMonth()] + " " + d.getDate() + ", " + d.getFullYear()
             <p>They come standard with front and rear brakes (except the 12 inch, which has rear brakes only), aluminum bicycle racing wheels, pneumatic tires, basket, and kick-stand. </p>
             <p>We offer them in a wide variety of colors. We do special orders, and can do two-tone color schemes (school colors, for example). <br />
               <strong>Click <a href="extras/Hoffman House - Scooter Flyer.pdf">here</a> to download a brochure about the scooters. <br />
-            Click <a href="http://www.hoffman-house.com/store/store.php">here</a> to go to our main site and shop for scooters and more.</strong> </p>
+            Click <a href="https://www.hoffman-house.com/store/store.php">here</a> to go to our main site and shop for scooters and more.</strong> </p>
             <p><img src="images/Amish-Scooters-by-Lake-small.jpg" alt="Amish Scooters Cool Colors by Lake" width="418" height="231" align="middle" /></p>
             <p>In addition to scooters, we carry Amish Made turkey, goose, deer, elk, and other calls; quilts, baskets, handbags, toys along with the occasional antique telephone....</p></td>
         </tr>
