--- a/static/amishscooters.com/scooter-color-chart.html
+++ b/static/amishscooters.com/scooter-color-chart.html
@@ -33,7 +33,7 @@
   <div class="mattblacktabs">
     <ul>
       <li><a href="http://www.amishscooters.com.com">Home</a></li>
-      <li><a href="http://www.hoffman-house.com/store/store.php">Enter Store</a></li>
+      <li><a href="https://www.hoffman-house.com/store/store.php">Enter Store</a></li>
       <li><a href="http://www.amishscooters.com/contact.html">Contact</a></li>
     </ul>
   </div>
@@ -71,14 +71,14 @@
       <h2>Navigation Menu</h2>
       <ul>
         <li class="first"><a href="index.html" accesskey="1" title="">Homepage</a></li>
-        <li><a href="http://www.hoffman-house.com/store/store.php" accesskey="2" title="">Enter Store </a></li>
+        <li><a href="https://www.hoffman-house.com/store/store.php" accesskey="2" title="">Enter Store </a></li>
         <li><a href="downloads.html" accesskey="3" title="">Downloads </a></li>
         <li><a href="scooter-color-chart.html" accesskey="4" title="">Scooter Color Chart </a></li>
 		<li><a href="slide-show-1.html" accesskey="5" title="">Scooter Workshop Pictures</a></li>
         
         
         <li><a href="about.html" accesskey="7" title="">About us </a></li>
-        <li><a href="http://www.hoffman-house.com" accesskey="8" title="">Hoffman House Home </a></li>
+        <li><a href="https://www.hoffman-house.com" accesskey="8" title="">Hoffman House Home </a></li>
         <li><a href="contact.html" accesskey="9" title="">Contact Us</a></li>
 		<li><a href="legal.html" accesskey="10" title="">Legal Stuff</a></li>
       </ul>
@@ -88,7 +88,7 @@
       <h2 align="center" class="title">News and Such </h2>
       <div class="content">
         <blockquote>
-          <p>Not all colors are in stock at all times. It is best to call first and check with Amy to see what we have, especially if time is critical <a href="http://www.hoffman-house.com/store/store.php"></a>.</p>
+          <p>Not all colors are in stock at all times. It is best to call first and check with Amy to see what we have, especially if time is critical <a href="https://www.hoffman-house.com/store/store.php"></a>.</p>
           <div style="background-color:#737375">
    	    <iframe src ="news.html" width ="100%" height ="400" overflow-x="hidden" border="0" frameborder="0" style="background-color:#737375" allowtransparency="false" scrolling="auto"> </iframe>
    	  </div>
