--- a/static/amishscooters.com/specials.html
+++ b/static/amishscooters.com/specials.html
@@ -33,7 +33,7 @@ var TODAY = monthname[d.getMonth()] + " " + d.getDate() + ", " + d.getFullYear()
   </tr>
 
   <tr bgcolor="#3366CC">
-    <td height="64" colspan="3" id="tagline" valign="top" align="center"><p><span class="bodyText style3"><a href="http|//www.hoffman-house.com" target="_blank"><img src="images/graphics/hoffman-house-address-yellow.png" width="486" height="143" border="0" /></a></span></p>
+    <td height="64" colspan="3" id="tagline" valign="top" align="center"><p><span class="bodyText style3"><a href="https://www.hoffman-house.com" target="_blank"><img src="images/graphics/hoffman-house-address-yellow.png" width="486" height="143" border="0" /></a></span></p>
     </td>
 	<td width="9">&nbsp;</td>
   </tr>
@@ -61,10 +61,10 @@ var TODAY = monthname[d.getMonth()] + " " + d.getDate() + ", " + d.getFullYear()
           <td width="165"><a href="http://www.amishscooters.com" class="navText">home</a></td>
         </tr>
         <tr>
-          <td width="165"><a href="http://www.hoffman-house.com" class="navText">main site </a></td>
+          <td width="165"><a href="https://www.hoffman-house.com" class="navText">main site </a></td>
         </tr>
         <tr>
-          <td width="165"><a href="http://www.hoffman-house.com/store/store.php" class="navText">shop for scooters </a></td>
+          <td width="165"><a href="https://www.hoffman-house.com/store/store.php" class="navText">shop for scooters </a></td>
         </tr>
         <tr>
           <td width="165"><a href="specials.html" class="navText">specials</a></td>
