--- a/static/amishscooters.com/index-ix-outage.html
+++ b/static/amishscooters.com/index-ix-outage.html
@@ -36,7 +36,7 @@ h3 {
   <div class="mattblacktabs">
     <ul>
       <li><a href="http://www.amishscooters.com">Home</a></li>
-      <li><a href="http://www.hoffman-house.com/store/store.php">Enter Store</a></li>
+      <li><a href="https://www.hoffman-house.com/store/store.php">Enter Store</a></li>
       <li><a href="http://www.amishscooters.com/contact.html">Contact</a></li>
     </ul>
 	<!-- AddThis Button BEGIN -->
@@ -67,7 +67,7 @@ h3 {
         <p>Our scooters are built with true craftsmanship, and are built to last. They can carry 300 pounds. They come standard with a basket, bell, front and rear brakes, front and rear fenders, and a kickstand.<br /> 
           <span class="style3">See where the scooters are made <a href="slide-show-1.html">here.</a></span> <br />
           <span class="style3">Download the Scooter Flyer <a href="extras/Hoffman House - Scooter Flyer.pdf" target="_blank">here<br />
-        </a> Enter our online store <a href="http://www.hoffman-house.com/store/store.php">here</a></span></p>
+        </a> Enter our online store <a href="https://www.hoffman-house.com/store/store.php">here</a></span></p>
       </div>
     </div>
     <!-- end #welcome -->
@@ -102,14 +102,14 @@ h3 {
       <h2>Navigation Menu</h2>
       <ul>
         <li class="first"><a href="index.html" accesskey="1" title="">Homepage</a></li>
-        <li><a href="http://www.hoffman-house.com/store/store.php" accesskey="2" title="">Enter Store </a></li>
+        <li><a href="https://www.hoffman-house.com/store/store.php" accesskey="2" title="">Enter Store </a></li>
         <li><a href="downloads.html" accesskey="3" title="">Downloads </a></li>
 		<li><a href="scooter-color-chart.html" accesskey="4" title="">Scooter Color Chart </a></li>
 		<li><a href="slide-show-1.html" accesskey="5" title="">Scooter Workshop Pictures</a></li>
 		
    
         <li><a href="about.html" accesskey="7" title="">About us </a></li>
-        <li><a href="http://www.hoffman-house.com" accesskey="8" title="">Hoffman House Home </a></li>
+        <li><a href="https://www.hoffman-house.com" accesskey="8" title="">Hoffman House Home </a></li>
         <li><a href="contact.html" accesskey="9" title="">Contact Us</a></li>
 		<li><a href="legal.html" accesskey="10" title="">Legal Stuff</a></li>
 		<li><a href="http://www.facebook.com/AmishScooters" title="" target="_blank" accesskey="8"><img src="graphics/facebook-logo.jpg" alt="Facebook" width="125" height="60" border="0" /></a></li>
