--- a/static/amishscooters.com/index.html
+++ b/static/amishscooters.com/index.html
@@ -36,7 +36,7 @@ h3 {
   <div class="mattblacktabs">
     <ul>
       <li><a href="http://www.amishscooters.com">Home</a></li>
-      <li><a href="http://www.hoffman-house.com/store/store.php">Enter Store</a></li>
+      <li><a href="https://www.hoffman-house.com/store/store.php">Enter Store</a></li>
       <li><a href="http://www.amishscooters.com/contact.html">Contact</a></li>
     </ul>
 	<!-- AddThis Button BEGIN -->
@@ -64,9 +64,9 @@ h3 {
         <p><strong>We</strong> closed our brick and mortar store in Intercourse, Pennsylvania, and have moved to a strictly online store. </p>
         <p>Our Amish Scooters are locally made on an Amish Farm. Amy just convinced them to let her pick her own colors. They are powder coated by a local Mennonite family on their farm. </p>
         <p>Our scooters are built with true craftsmanship, and are built to last. They can carry 300 pounds. They come standard with a basket, bell, front and rear brakes, front and rear fenders, and a kickstand.<br /> 
-          <span class="style3">See where the scooters are made <a href="slide-show-1.html">here.</a></span> <br />
-          <span class="style3">Download the Scooter Flyer <a href="extras/Hoffman House - Scooter Flyer.pdf" target="_blank">here<br />
-        </a> Our web host provider has migrated our sites and broken our store.. Please email us for information and sales inquiries at <a href="mailto:sales@hoffman-house.com">sales@hoffman-house.com</a>. Thank you!<a href="http://www.hoffman-house.com/store/store.php"></a></span></p>
+          <span class="style3">See where the scooters are made <a href="slide-show-1.html">here.</a><br />
+          Download the Scooter Flyer <a href="extras/Hoffman House - Scooter Flyer.pdf" target="_blank">here<br /> </a> 
+          Please email us for information and sales inquiries at <a href="mailto:sales@hoffman-house.com">sales@hoffman-house.com</a> or visit our <a href="https://www.hoffman-house.com/store/store.php">online store</a>. Thank you!</span></p>
       </div>
     </div>
     <!-- end #welcome -->
@@ -101,14 +101,14 @@ h3 {
       <h2>Navigation Menu</h2>
       <ul>
         <li class="first"><a href="index.html" accesskey="1" title="">Homepage</a></li>
-        <li><a href="http://www.hoffman-house.com/store/store.php" accesskey="2" title="">Enter Store </a></li>
+        <li><a href="https://www.hoffman-house.com/store/store.php" accesskey="2" title="">Enter Store </a></li>
         <li><a href="downloads.html" accesskey="3" title="">Downloads </a></li>
 		<li><a href="scooter-color-chart.html" accesskey="4" title="">Scooter Color Chart </a></li>
 		<li><a href="slide-show-1.html" accesskey="5" title="">Scooter Workshop Pictures</a></li>
 		
    
         <li><a href="about.html" accesskey="7" title="">About us </a></li>
-        <li><a href="http://www.hoffman-house.com" accesskey="8" title="">Hoffman House Home </a></li>
+        <li><a href="https://www.hoffman-house.com" accesskey="8" title="">Hoffman House Home </a></li>
         <li><a href="contact.html" accesskey="9" title="">Contact Us</a></li>
 		<li><a href="legal.html" accesskey="10" title="">Legal Stuff</a></li>
 		<li><a href="http://www.facebook.com/AmishScooters" title="" target="_blank" accesskey="8"><img src="graphics/facebook-logo.jpg" alt="Facebook" width="125" height="60" border="0" /></a></li>
